# -course-1-ITMO

./: README.md
1sem/algo/: 1C.py  2A.py  2E.py  2С.py  4A.py  4B.py  5E.py  8C.py  8H.py  8L.py
1sem/algo/solutions/: 1A.py  1B.py  2A.py  2B.py  2F.py  3A.py  3B.py  4D.py  4E.py  5D.py  8A.py  8B.py  8F.py  8G.py  8H.py  8L.py  8O.py  8P.py
1sem/arch/proc/: mips_cpu.v
1sem/math/lab1/: mathLab.py
1sem/math/lab2/: lab_2.py
1sem/prog-intro/MNKGame/: Board.java  Cell.java  Game.java  HumanPlayer.java  MNK.java  Main.java  Move.java  Player.java  Position.java  RandomPlayer.java  Result.java  Rhombus.java  SequentialPlayer.java  SettingsOfGame.java  TicTacToeBoard.java
1sem/prog-intro/MyScanner/: MySSScanner.java  ReverseMaxOct.java
1sem/prog-intro/Reverse/: Reverse.java  ReverseTransp.java
1sem/prog-intro/SumOfNumbers/: Sum.java  SumFloatPunct.java
1sem/prog-intro/WSPP/: Wspp.java  WsppCountPosition.java
1sem/prog-intro/WordStat/: WordStatInput.java  WordStatWordsPrefix.java
1sem/prog-intro/expression/: Add.java  BinaryOperations.java  Const.java  Divide.java  FatherExpression.java  LongTripleExpression.java  Multiply.java  Negate.java  Operands.java  Operation.java  Sqrt.java  Square.java  Subtract.java  Triangle.java  UnaryOperations.java  Variable.java
1sem/prog-intro/markup/: Emphasis.java  Mark.java  MarkSettings.java  Markdown.java  Paragraph.java  Strikeout.java  Strong.java  Text.java
1sem/prog-intro/md2html/: IntList.java  (+1 more)
2sem/SKKV/lab2/: CMakeLists.txt  RBTree.c  RBtree.h  dot_worker.c  dot_worker.h  main.c  utils.c  utils.h
(+156 files in other folders)
